--- a/plugins/Essentials/upgrades-done.yml
+++ b/plugins/Essentials/upgrades-done.yml
@@ -1,10 +1,10 @@
-updateUsersToNewDefaultHome: false
-movemotdToFile: false
-moveWorthValuesToWorthYml: false
-moverulesToFile: false
-updateUsersPowerToolsFormat: false
-sanitizeAllUserFilenames: false
-deleteOldItemsCsv: false
+updateUsersToNewDefaultHome: true
+movemotdToFile: true
+moveWorthValuesToWorthYml: true
+moverulesToFile: true
+updateUsersPowerToolsFormat: true
+sanitizeAllUserFilenames: true
+deleteOldItemsCsv: true
 updateJailsToNewJailsConfig: true
 updateSpawnsToNewSpawnsConfig: true
-updateUsersHomesFormat: false
+updateUsersHomesFormat: true
