--- a/server.properties
+++ b/server.properties
@@ -8,7 +8,7 @@ server-port=25565
 level-type=DEFAULT
 enable-rcon=false
 level-seed=
-server-ip=
+server-ip=localhost
 spawn-npcs=true
 white-list=false
 spawn-animals=true
@@ -20,4 +20,4 @@ max-players=20
 spawn-monsters=true
 generate-structures=true
 view-distance=10
-motd=A Minecraft Server
+motd=Redacted Inc base server
