--- a/plugins/GroupManager/globalgroups.yml
+++ b/plugins/GroupManager/globalgroups.yml
@@ -1,225 +1,122 @@
 groups:
-
-  g:essentials_default:
-    permissions:
+  g:Visitor:
     - essentials.help
     - essentials.helpop
     - essentials.list
     - essentials.motd
+    - essentials.portal
     - essentials.rules
     - essentials.spawn
-    - groupmanager.notify.self
-    
-  g:essentials_builder:
-    permissions:
-    - essentials.afk
-    - essentials.back
-    - essentials.back.ondeath
-    - essentials.balance
-    - essentials.balance.others
-    - essentials.balancetop
-    - essentials.chat.color
-    - essentials.chat.shout
-    - essentials.chat.question
-    - essentials.compass
-    - essentials.depth
+    - essentials.warp
     - essentials.home
-    - essentials.ignore
-    - essentials.kit
-    - essentials.kit.tools
-    - essentials.mail
-    - essentials.mail.send
-    - essentials.me
-    - essentials.msg
-    - essentials.nick
-    - essentials.pay
-    - essentials.ping
-    - essentials.powertool
-    - essentials.protect
     - essentials.sethome
     - essentials.signs.use.*
-    - essentials.signs.create.disposal
-    - essentials.signs.create.mail
-    - essentials.signs.create.protection
-    - essentials.signs.create.trade
-    - essentials.signs.break.disposal
-    - essentials.signs.break.mail
-    - essentials.signs.break.protection
-    - essentials.signs.break.trade
-    - essentials.suicide
-    - essentials.time
-    - essentials.tpa
-    - essentials.tpaccept
-    - essentials.tpahere
-    - essentials.tpdeny
-    - essentials.warp
-    - essentials.warp.list
-    - essentials.worth
-    
-  g:essentials_moderator:
-    permissions:
-    - essentials.ban
-    - essentials.ban.notify
-    - essentials.banip
-    - essentials.broadcast
-    - essentials.clearinventory
-    - essentials.delwarp
-    - essentials.eco.loan
-    - essentials.ext
-    - essentials.getpos
-    - essentials.helpop.recieve
-    - essentials.home.others
-    - essentials.invsee
-    - essentials.jails
-    - essentials.jump
-    - essentials.kick
-    - essentials.kick.notify
-    - essentials.kill
-    - essentials.mute
-    - essentials.nick.others
-    - essentials.realname
-    - essentials.setwarp
-    - essentials.signs.create.*
-    - essentials.signs.break.*
-    - essentials.spawner
-    - essentials.thunder
-    - essentials.time
-    - essentials.time.set
-    - essentials.protect.alerts
-    - essentials.protect.admin
-    - essentials.protect.ownerinfo
-    - essentials.ptime
-    - essentials.ptime.others
-    - essentials.togglejail
-    - essentials.top
-    - essentials.tp
-    - essentials.tphere
-    - essentials.tppos
-    - essentials.tptoggle
-    - essentials.unban
-    - essentials.unbanip
-    - essentials.weather
-    - essentials.whois
-    - essentials.world
-    - groupmanager.listgroups
-    - groupmanager.mandemote
-    - groupmanager.manpromote
-    - groupmanager.manselect
-    - groupmanager.manuadd
-    - groupmanager.manudel
-    - groupmanager.manwhois
-    - groupmanager.notify.other
-    
-  g:essentials_admin:
-    permissions:
-    - -essentials.backup
-    - -essentials.essentials
-    - -essentials.setspawn
-    - -essentials.reloadall
-    - -essentials.plugin
-    - essentials.*
-    - groupmanager.mantogglevalidate
-    - groupmanager.mansave
-    - groupmanager.mangcheckp
-    - groupmanager.manglistp
-    - groupmanager.manucheckp
-    - groupmanager.manulistp
-    
-  g:bukkit_default:
-    permissions:
-    - bukkit.broadcast.user
-    - -bukkit.command.plugins
-    
-  g:bukkit_moderator:
-    permissions:
-    - bukkit.command.ban
-    - bukkit.command.ban.ip
-    - bukkit.command.ban.player
-    - bukkit.command.gamemode
-    - bukkit.command.kick
-    - bukkit.command.unban
-    - bukkit.command.unban.ip
-    - bukkit.command.unban.player
+    - groupmanager.notify.self
+    - minecartmania.signs.*
+    - multiverse.access.*
+    - multiverse.portal.access.*
+    - multiverse.teleport.self.*
 
-  g:bukkit_admin:
+  g:Member:
     permissions:
-    - bukkit.broadcast
-    - bukkit.broadcast.admin
-    - bukkit.command.give
-    - bukkit.command.help
-    - bukkit.command.kill
-    - bukkit.command.list
-    - bukkit.command.me
-    - -bukkit.command.op
-    - -bukkit.command.op.give
-    - -bukkit.command.op.take
-    - bukkit.command.plugins
-    - bukkit.command.reload
-    - bukkit.command.save
-    - bukkit.command.save.disable
-    - bukkit.command.save.enable
-    - bukkit.command.save.perform
-    - bukkit.command.say
-    - bukkit.command.stop
-    - bukkit.command.teleport
-    - bukkit.command.tell
-    - bukkit.command.time
-    - bukkit.command.time.add
-    - bukkit.command.time.set
-    - bukkit.command.version
-    - bukkit.command.whitelist
-    - bukkit.command.whitelist.add
-    - bukkit.command.whitelist.disable
-    - bukkit.command.whitelist.enable
-    - bukkit.command.whitelist.list
-    - bukkit.command.whitelist.reload
-    - bukkit.command.whitelist.remove
+      - essentials.afk
+      - essentials.back
+      - essentials.back.ondeath
+      - essentials.balance
+      - essentials.balance.others
+      - essentials.balancetop
+      - essentials.chat.color
+      - essentials.chat.question
+      - essentials.home
+      - essentials.ignore
+      - essentials.kit
+      - essentials.kit.*
+      - essentials.mail
+      - essentials.mail.send
+      - essentials.me
+      - essentials.msg
+      - essentials.nick
+      - essentials.pay
+      - essentials.ping
+      - essentials.realname
+      - essentials.seen
+      - essentials.sell
+      - essentials.signs.break.disposal
+      - essentials.signs.break.mail
+      - essentials.signs.break.protection
+      - essentials.signs.break.trade
+      - essentials.signs.create.disposal
+      - essentials.signs.create.mail
+      - essentials.signs.create.protection
+      - essentials.signs.create.trade
+      - essentials.signs.use.*
+      - essentials.suicide
+      - essentials.time
+      - essentials.time.set
+      - essentials.tpa
+      - essentials.tpaccept
+      - essentials.tpahere
+      - essentials.tpdeny
+      - essentials.warp
+      - essentials.warp.list
+      - essentials.worth
+      - multiverse.core.list.worlds
+      - multiverse.portal.access.*
+      - multiverse.portal.list
 
-  g:towny_builder:
+  g:Moderator:
     permissions:
-    - towny.town.*
-    - towny.nation.*
-    - towny.chat.tc
-    - towny.chat.nc
-    - towny.wild.block.6.*
-    - towny.wild.block.14.destroy
-    - towny.wild.block.15.destroy
-    - towny.wild.block.16.destroy
-    - towny.wild.block.17.*
-    - towny.wild.block.18.destroy
-    - towny.wild.block.21.destroy
-    - towny.wild.block.31.destroy
-    - towny.wild.block.37.destroy
-    - towny.wild.block.38.destroy
-    - towny.wild.block.39.destroy
-    - towny.wild.block.40.destroy
-    - towny.wild.block.50.destroy
-    - towny.wild.block.56.destroy
-    - towny.wild.block.73.destroy
-    - towny.wild.block.74.destroy
-    - towny.wild.block.78.destroy
-    - towny.wild.block.81.destroy
-    - towny.wild.block.82.destroy
-    - towny.wild.block.83.destroy
-    - towny.wild.block.86.destroy
-    - towny.wild.block.103.destroy
-    - towny.wild.block.106.destroy
-    - towny.wild.block.111.destroy
-    - towny.wild.block.115.destroy
+      - essentials.ban
+      - essentials.ban.notify
+      - essentials.banip
+      - essentials.broadcast
+      - essentials.clearinventory
+      - essentials.ext
+      - essentials.getpos
+      - essentials.helpop.recieve
+      - essentials.home.others
+      - essentials.jails
+      - essentials.kick
+      - essentials.kick.notify
+      - essentials.kill
+      - essentials.mute
+      - essentials.nick.others
+      - essentials.ptime
+      - essentials.realname
+      - essentials.togglejail
+      - essentials.top
+      - essentials.tp
+      - essentials.tphere
+      - essentials.tppos
+      - essentials.unban
+      - essentials.unbanip
+      - essentials.weather
+      - essentials.whois
+      - essentials.world
+      - groupmanager.listgroups
+      - groupmanager.mandemote
+      - groupmanager.manpromote
+      - groupmanager.manselect
+      - groupmanager.manuadd
+      - groupmanager.manudel
+      - groupmanager.manwhois
+      - groupmanager.notify.other
+      - multiverse.teleport.other.*
 
-  g:towny_moderator:
+  g:Operator:
     permissions:
-    - towny.chat.mod
-    - towny.wild.block.64.switch
-    - towny.wild.block.83.build
-    - towny.wild.block.86.build
-    - towny.wild.block.103.build
-    - towny.wild.block.111.build
-    - towny.wild.block.115.build
+      - essentials.*
+      - groupmanager.mangcheckp
+      - groupmanager.manglistp
+      - groupmanager.mansave
+      - groupmanager.mantogglevalidate
+      - groupmanager.manucheckp
+      - groupmanager.manulistp
+      - instamode.*
+      - worldedit.*
+      - worldguard.*
 
-  g:towny_admin:
+  g:Owner:
     permissions:
-    - towny.admin
-    - -towny.wild.block.119.destroy
-    - -towny.wild.block.120.destroy
-    - towny.chat.admin
+      - '*'
+      - bukkit.*
