--- a/plugins/GroupManager/worlds/world/users.yml
+++ b/plugins/GroupManager/worlds/world/users.yml
@@ -1,15 +1,7 @@
 # "For a more advanced configuration example utilizing the advanced features of GroupManager, see http://pastebin.com/a8ZA0j5G"
 users:
-  snowleo:
+  Teffen:
     subgroups: []
     permissions: []
-    group: Builder
-  KHobbits:
-    subgroups: []
-    permissions: []
-    group: Moderator
-  ElgarL:
-    subgroups: []
-    permissions: []
-    group: Moderator
+    group: Owner
 
