--- a/plugins/WorldEdit/config.yml
+++ b/plugins/WorldEdit/config.yml
@@ -17,9 +17,9 @@
 
 limits:
     max-blocks-changed:
-        default: -1
-        maximum: -1
-    max-radius: -1
+        default: 1000000
+        maximum: 1000000
+    max-radius: 1000000
     max-super-pickaxe-size: 5
     max-brush-radius: 5
     disallowed-blocks: [6, 7, 14, 15, 16, 26, 27, 28, 29, 39, 31, 32, 33, 34, 36, 37, 38, 39, 40, 46, 50, 51, 56, 59, 69, 73, 74, 75, 76, 77, 81, 83]
@@ -37,7 +37,7 @@ super-pickaxe:
     many-drop-items: false
 
 snapshots:
-    directory:
+    directory: /slow/backups/
 
 navigation-wand:
     item: 345
