--- a/plugins/WorldGuard/config.yml
+++ b/plugins/WorldGuard/config.yml
@@ -90,7 +90,7 @@ blacklist:
             table: blacklist_events
             user: root
             pass: ''
-summary-on-start: true
+summary-on-start: false
 weather:
     always-raining: false
     disable-powered-creepers: false
@@ -104,7 +104,7 @@ crops:
     disable-creature-trampling: false
     disable-player-trampling: false
 use-player-move-event: true
-op-permissions: true
+op-permissions: false
 player-damage:
     teleport-on-void-falling: false
     disable-drowning-damage: false
