--- a/plugins/WorldInventories/config.yml
+++ b/plugins/WorldInventories/config.yml
@@ -3,8 +3,9 @@ saveinterval: 0
 donotifications: true
 dostats: false
 groups:
-    examplegrouptwo:
-    - exampleworldthree
-    exampleworldone:
-    - exampleworldone
-    - exampleworldtwo
+    survival:
+    - world
+    - world_the_end
+    - world_nether
+    creative:
+    - my_creative_world
