--- a/plugins/Multiverse-Core/worlds.yml
+++ b/plugins/Multiverse-Core/worlds.yml
@@ -1,5 +1,5 @@
 worlds:
-  world:
+  my_world:
     seed: -5964822137788807993
     environment: NORMAL
     hidden: false
@@ -29,10 +29,10 @@ worlds:
       z: 0.0
       pitch: 0.0
       yaw: 0.0
-      world: world
+      world: my_world
     autoload: true
     bedrespawn: true
-  world_nether:
+  my_world_nether:
     seed: -5964822137788807993
     environment: NETHER
     hidden: false
@@ -62,10 +62,10 @@ worlds:
       z: 0.0
       pitch: 0.0
       yaw: 0.0
-      world: world_nether
+      world: my_world_nether
     autoload: true
     bedrespawn: true
-  world_the_end:
+  my_world_the_end:
     seed: -5964822137788807993
     environment: THE_END
     hidden: false
@@ -95,6 +95,39 @@ worlds:
       z: 0.0
       pitch: 0.0
       yaw: 0.0
-      world: world_the_end
+      world: my_world_the_end
+    autoload: true
+    bedrespawn: true
+  my_creative_world:
+    seed: -1264822131588807993
+    environment: NORMAL
+    hidden: false
+    alias:
+      name: ''
+      color: WHITE
+    pvp: true
+    scale: 1.0
+    respawnworld: ''
+    allowweather: true
+    difficulty: EASY
+    animals:
+      spawn: true
+    monsters:
+      spawn: true
+    entryfee:
+      currency: -1
+      price: 0.0
+    hunger: true
+    autoheal: true
+    adjustspawn: true
+    gamemode: CREATIVE
+    keepspawninmemory: true
+    spawn:
+      x: 0.0
+      y: 65.0
+      z: 0.0
+      pitch: 0.0
+      yaw: 0.0
+      world: my_creative_world
     autoload: true
     bedrespawn: true
