--- a/plugins/Multiverse-Core/worlds.yml
+++ b/plugins/Multiverse-Core/worlds.yml
@@ -24,9 +24,9 @@ worlds:
     gamemode: SURVIVAL
     keepspawninmemory: true
     spawn:
-      x: 0.0
-      y: 65.0
-      z: 0.0
+      x: 97.5
+      y: 64.0
+      z: 249.5
       pitch: 0.0
       yaw: 0.0
       world: my_world
@@ -123,11 +123,110 @@ worlds:
     gamemode: CREATIVE
     keepspawninmemory: true
     spawn:
-      x: 0.0
-      y: 65.0
-      z: 0.0
+      x: 234.5
+      y: 64.0
+      z: 258.5
       pitch: 0.0
       yaw: 0.0
       world: my_creative_world
+    autoload: true
+    bedrespawn: true
+  world:
+    seed: -5348317937849401268
+    environment: NORMAL
+    hidden: false
+    alias:
+      name: ''
+      color: WHITE
+    pvp: true
+    scale: 1.0
+    respawnworld: ''
+    allowweather: true
+    difficulty: EASY
+    animals:
+      spawn: true
+    monsters:
+      spawn: true
+    entryfee:
+      currency: -1
+      price: 0.0
+    hunger: true
+    autoheal: true
+    adjustspawn: true
+    gamemode: SURVIVAL
+    keepspawninmemory: true
+    spawn:
+      x: -23.5
+      y: 67.0
+      z: 255.5
+      pitch: 0.0
+      yaw: 0.0
+      world: world
+    autoload: true
+    bedrespawn: true
+  world_nether:
+    seed: -5348317937849401268
+    environment: NETHER
+    hidden: false
+    alias:
+      name: ''
+      color: WHITE
+    pvp: true
+    scale: 8.0
+    respawnworld: ''
+    allowweather: true
+    difficulty: EASY
+    animals:
+      spawn: true
+    monsters:
+      spawn: true
+    entryfee:
+      currency: -1
+      price: 0.0
+    hunger: true
+    autoheal: true
+    adjustspawn: true
+    gamemode: SURVIVAL
+    keepspawninmemory: true
+    spawn:
+      x: -6.5
+      y: 65.0
+      z: -1.5
+      pitch: 0.0
+      yaw: 0.0
+      world: world_nether
+    autoload: true
+    bedrespawn: true
+  world_the_end:
+    seed: -5348317937849401268
+    environment: THE_END
+    hidden: false
+    alias:
+      name: ''
+      color: WHITE
+    pvp: true
+    scale: 1.0
+    respawnworld: ''
+    allowweather: true
+    difficulty: EASY
+    animals:
+      spawn: true
+    monsters:
+      spawn: true
+    entryfee:
+      currency: -1
+      price: 0.0
+    hunger: true
+    autoheal: true
+    adjustspawn: true
+    gamemode: SURVIVAL
+    keepspawninmemory: true
+    spawn:
+      x: -0.5
+      y: 58.0
+      z: -0.5
+      pitch: 0.0
+      yaw: 0.0
+      world: world_the_end
     autoload: true
     bedrespawn: true
