--- a/server.properties
+++ b/server.properties
@@ -1,7 +1,7 @@
 #Minecraft server properties
 #Wed Feb 15 21:28:16 EST 2012
 allow-nether=true
-level-name=world
+level-name=my_world
 enable-query=false
 allow-flight=false
 server-port=25565
