--- a/plugins/GroupManager/config.yml
+++ b/plugins/GroupManager/config.yml
@@ -30,13 +30,15 @@ settings:
         # subsequent elements 'world_nether' and 'world_the_end' are worlds which will use
         # the same user/groups files as the parent.
         # Each child world can be configured to mirror the 'groups', 'users' or both files from it's parent.
-        world:
-          world_nether:
+        my_world:
+          my_world_nether:
           - users
           - groups
-          world_the_end:
+          my_world_the_end:
           - users
           - groups
+          my_world_creative:
+          - users
     #  world2:      (World2 would have it's own set of user and groups files)
     #    world3:
     #    - users    (World3 would use the users.yml from world2, but it's own groups.yml)
