--- a/bukkit.yml
+++ b/bukkit.yml
@@ -21,15 +21,26 @@ settings:
   update-folder: update
   ping-packet-limit: 100
   use-exact-login-location: false
+  plugin-profiling: false
 ticks-per:
   animal-spawns: 400
   monster-spawns: 1
-aliases:
-  icanhasbukkit:
-  - version
+auto-updater:
+  enabled: true
+  on-broken:
+  - warn-console
+  - warn-ops
+  on-update:
+  - warn-console
+  - warn-ops
+  preferred-channel: rb
+  host: dl.bukkit.org
 database:
   username: bukkit
   isolation: SERIALIZABLE
   driver: org.sqlite.JDBC
   password: walrus
   url: jdbc:sqlite:{DIR}{NAME}.db
+aliases:
+  icanhasbukkit:
+  - version
