--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Feb 15 21:28:16 EST 2012
+#Sat Mar 10 23:07:17 EST 2012
 allow-nether=true
 level-name=my_world
 enable-query=false
@@ -9,6 +9,7 @@ level-type=DEFAULT
 enable-rcon=false
 level-seed=
 server-ip=localhost
+max-build-height=256
 spawn-npcs=true
 white-list=false
 spawn-animals=true
@@ -18,6 +19,6 @@ difficulty=1
 gamemode=0
 max-players=20
 spawn-monsters=true
-generate-structures=true
 view-distance=10
+generate-structures=true
 motd=Redacted Inc base server
